# mkbootimg

./: CMakeLists.txt  bootimg.h  unpackbootimg.c
debian/: changelog  control
mincrypt/: CMakeLists.txt
